atualização de testes unitários, adição do Redis